--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "A frontend for mqtt based IoT sprinklers systems",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf ./dist",
+    "build": "webpack",
+    "start:dev": "webpack-dev-server --content-base ./dist/"
   },
   "repository": {
     "type": "git",
@@ -16,5 +19,31 @@
   "bugs": {
     "url": "https://github.com/amikhalev/sprinklers3/issues"
   },
-  "homepage": "https://github.com/amikhalev/sprinklers3#readme"
+  "homepage": "https://github.com/amikhalev/sprinklers3#readme",
+  "dependencies": {
+    "@types/classnames": "0.0.32",
+    "@types/node": "^7.0.13",
+    "@types/react": "^15.0.23",
+    "@types/react-dom": "^15.5.0",
+    "classnames": "^2.2.5",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
+    "paho-mqtt": "^1.0.3",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.67.0"
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "^3.1.3",
+    "css-loader": "^0.28.0",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.17.0",
+    "ts-loader": "^2.0.3",
+    "typescript": "^2.3.1",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.4"
+  }
 }
