--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf ./dist",
     "build": "webpack",
-    "start:dev": "webpack-dev-server --content-base ./dist/"
+    "start:dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -25,20 +25,25 @@
     "@types/node": "^7.0.13",
     "@types/react": "^15.0.23",
     "@types/react-dom": "^15.5.0",
+    "@types/react-fontawesome": "^1.5.0",
     "classnames": "^2.2.5",
+    "font-awesome": "^4.7.0",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "paho-mqtt": "^1.0.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-fontawesome": "^1.6.1",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.67.0"
   },
   "devDependencies": {
+    "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.3",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "react-hot-loader": "^3.0.0-beta.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.17.0",
     "ts-loader": "^2.0.3",
