--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,9 @@
         "experimentalDecorators": true,
         "target": "es5",
         "typeRoots": ["node_modules/@types"]
-    }
+    },
+    "files": [
+        "./node_modules/@types/webpack-env/index.d.ts",
+        "./app/script/index.tsx"
+    ]
 }
