--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf ./dist",
-    "build": "webpack",
-    "start:dev": "webpack-dev-server"
+    "clean": "rm -rf ./dist ./build",
+    "build": "webpack --config ./webpack/prod.config.js",
+    "start:dev": "webpack-dev-server --config ./webpack/dev.config.js"
   },
   "repository": {
     "type": "git",
