--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "mobx-react-devtools": "^4.2.11",
     "react-hot-loader": "^3.0.0-beta.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.17.0",
