--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.17.0",
     "ts-loader": "^2.0.3",
+    "tslint": "^5.2.0",
     "typescript": "^2.3.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.4"
