--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf ./dist ./build",
     "build": "webpack --config ./webpack/prod.config.js",
-    "start:dev": "webpack-dev-server --config ./webpack/dev.config.js",
+    "start": "webpack-dev-server --config ./webpack/dev.config.js",
     "lint": "tslint app/script/**/* || :"
   },
   "repository": {
@@ -38,7 +38,7 @@
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
     "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.67.2"
+    "semantic-ui-react": "^0.68.3"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.0",
