Renamed start task in tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,8 +16,8 @@
             "args": ["update"]
         },
         {
-            "taskName": "start:dev",
-            "args": ["run", "start:dev"]
+            "taskName": "start",
+            "args": ["run", "start"]
         },
         {
             "taskName": "test",
