--- a/package.json
+++ b/package.json
@@ -22,38 +22,38 @@
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
   "dependencies": {
-    "@types/classnames": "0.0.32",
-    "@types/node": "^7.0.13",
+    "@types/classnames": "^2.2.0",
+    "@types/node": "^7.0.22",
     "@types/object-assign": "^4.0.30",
-    "@types/react": "^15.0.23",
+    "@types/react": "^15.0.25",
     "@types/react-dom": "^15.5.0",
     "@types/react-fontawesome": "^1.5.0",
     "classnames": "^2.2.5",
     "font-awesome": "^4.7.0",
-    "mobx": "^3.1.9",
-    "mobx-react": "^4.1.8",
+    "mobx": "^3.1.10",
+    "mobx-react": "^4.2.1",
     "object-assign": "^4.1.1",
     "paho-mqtt": "^1.0.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
     "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.68.3"
+    "semantic-ui-react": "^0.68.4"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.3",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.4",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
-    "mobx-react-devtools": "^4.2.11",
+    "mobx-react-devtools": "^4.2.13",
     "react-hot-loader": "^3.0.0-beta.6",
     "source-map-loader": "^0.2.1",
-    "style-loader": "^0.17.0",
-    "ts-loader": "^2.0.3",
-    "tslint": "^5.2.0",
-    "typescript": "^2.3.1",
-    "webpack": "^2.4.1",
+    "style-loader": "^0.18.1",
+    "ts-loader": "^2.1.0",
+    "tslint": "^5.3.2",
+    "typescript": "^2.3.3",
+    "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.4"
   }
 }
