Work on lots of cool stuff

--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
   "dependencies": {
+    "@types/bluebird": "^3.5.4",
     "@types/classnames": "^2.2.0",
     "@types/node": "^7.0.22",
     "@types/object-assign": "^4.0.30",
     "@types/react": "^15.0.25",
     "@types/react-dom": "^15.5.0",
     "@types/react-fontawesome": "^1.5.0",
+    "bluebird": "^3.5.0",
     "classnames": "^2.2.5",
     "font-awesome": "^4.7.0",
     "mobx": "^3.1.10",
