--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
   "dependencies": {
-    "@types/bluebird": "^3.5.4",
+    "@types/bluebird": "^3.5.5",
     "@types/classnames": "^2.2.0",
-    "@types/node": "^7.0.22",
+    "@types/node": "^7.0.27",
     "@types/object-assign": "^4.0.30",
-    "@types/react": "^15.0.25",
+    "@types/react": "^15.0.26",
     "@types/react-dom": "^15.5.0",
     "@types/react-fontawesome": "^1.5.0",
     "bluebird": "^3.5.0",
     "classnames": "^2.2.5",
     "font-awesome": "^4.7.0",
-    "mobx": "^3.1.10",
+    "mobx": "^3.1.11",
     "mobx-react": "^4.2.1",
     "object-assign": "^4.1.1",
     "paho-mqtt": "^1.0.3",
@@ -40,7 +40,7 @@
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
     "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.68.4"
+    "semantic-ui-react": "^0.68.5"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.0",
@@ -53,9 +53,10 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.1",
     "ts-loader": "^2.1.0",
-    "tslint": "^5.3.2",
-    "typescript": "^2.3.3",
+    "tslint": "^5.4.2",
+    "typescript": "^2.3.4",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.4"
-  }
+  },
+  "false": {}
 }
