--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
   "dependencies": {
-    "@types/bluebird": "^3.5.5",
     "@types/classnames": "^2.2.0",
-    "@types/node": "^7.0.27",
+    "@types/core-js": "^0.9.42",
+    "@types/node": "^8.0.6",
     "@types/object-assign": "^4.0.30",
     "@types/react": "^15.0.26",
     "@types/react-dom": "^15.5.0",
     "@types/react-fontawesome": "^1.5.0",
-    "bluebird": "^3.5.0",
     "classnames": "^2.2.5",
+    "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "mobx": "^3.1.11",
     "mobx-react": "^4.2.1",
@@ -40,7 +40,7 @@
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
     "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.68.5",
+    "semantic-ui-react": "^0.70.0",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
@@ -56,7 +56,7 @@
     "ts-loader": "^2.1.0",
     "tslint": "^5.4.2",
     "typescript": "^2.3.4",
-    "webpack": "^2.6.1",
+    "webpack": "^3.0.0",
     "webpack-dev-server": "^2.4.4"
   },
   "false": {}
