--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "jsx": "react",
         "experimentalDecorators": true,
         "target": "es5",
+        "lib": ["es6", "dom"],
         "typeRoots": ["node_modules/@types"]
     },
     "files": [
