--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/core-js": "^0.9.42",
     "@types/node": "^8.0.6",
     "@types/object-assign": "^4.0.30",
+    "@types/paho-mqtt": "^1.0.0",
     "@types/react": "^15.0.26",
     "@types/react-dom": "^15.5.0",
     "@types/react-fontawesome": "^1.5.0",
