--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/node": "^8.0.6",
     "@types/object-assign": "^4.0.30",
     "@types/paho-mqtt": "^1.0.0",
-    "@types/react": "^15.0.26",
+    "@types/react": "^16",
     "@types/react-dom": "^15.5.0",
     "@types/react-fontawesome": "^1.5.0",
     "@types/react-transition-group": "^1.1.1",
@@ -38,12 +38,12 @@
     "mobx-react": "^4.2.1",
     "object-assign": "^4.1.1",
     "paho-mqtt": "^1.0.3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": ">=16.0.0-beta.5 <17",
+    "react-dom": ">=16.0.0-beta.5 <17",
     "react-fontawesome": "^1.6.1",
     "react-transition-group": "^1.2.0",
     "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.70.0",
+    "semantic-ui-react": "^0.72.0",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
