--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "style-loader": "^0.18.1",
     "ts-loader": "^2.1.0",
     "tslint": "^5.4.2",
+    "tslint-react": "^3.2.0",
     "typescript": "^2.3.4",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.4.4"
