--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf ./dist ./build",
-    "build": "webpack --config ./webpack/prod.config.js",
-    "start": "webpack-dev-server --config ./webpack/dev.config.js",
+    "build:app": "webpack --config ./app/webpack/prod.config.js",
+    "build:server": "tsc --project server",
+    "watch:app": "yarn build:app --watch",
+    "watch:server": "yarn build:server --watch",
+    "start:dev-server": "webpack-dev-server --config ./app/webpack/dev.config.js",
+    "start": "node dist/index.js",
     "lint": "tslint --project . --force"
   },
   "repository": {
@@ -23,6 +27,7 @@
   "dependencies": {
     "@types/classnames": "^2.2.0",
     "@types/core-js": "^0.9.42",
+    "@types/express": "^4.0.37",
     "@types/node": "^8.0.6",
     "@types/object-assign": "^4.0.30",
     "@types/paho-mqtt": "^1.0.0",
@@ -33,6 +38,7 @@
     "@types/react-transition-group": "^1.1.1",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
+    "express": "^4.15.4",
     "font-awesome": "^4.7.0",
     "mobx": "^3.1.11",
     "mobx-react": "^4.2.1",
@@ -47,6 +53,7 @@
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
+    "@types/webpack-dev-middleware": "^1.9.3",
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.3",
     "css-loader": "^0.28.4",
@@ -61,6 +68,7 @@
     "tslint-react": "^3.2.0",
     "typescript": "^2.3.4",
     "webpack": "^3.0.0",
+    "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.4.4"
   }
 }
