--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "watch:server": "yarn build:server --watch",
     "start:dev-server": "webpack-dev-server --config ./app/webpack/dev.config.js",
     "start": "node dist/index.js",
-    "lint": "tslint --project . --force"
+    "lint:app": "tslint --project app --force",
+    "lint:server": "tslint --project server --force",
+    "lint": "run-p lint:*"
   },
   "repository": {
     "type": "git",
@@ -60,6 +62,7 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "mobx-react-devtools": "^4.2.13",
+    "npm-run-all": "^4.1.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.1",
