--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^8.0.6",
     "@types/object-assign": "^4.0.30",
     "@types/paho-mqtt": "^1.0.0",
+    "@types/prop-types": "^15.5.1",
     "@types/react": "^16",
     "@types/react-dom": "^15.5.0",
     "@types/react-fontawesome": "^1.5.0",
@@ -47,6 +48,7 @@
     "mobx-react": "^4.2.1",
     "object-assign": "^4.1.1",
     "paho-mqtt": "^1.0.3",
+    "prop-types": "^15.5.10",
     "react": ">=16.0.0-beta.5 <17",
     "react-dom": ">=16.0.0-beta.5 <17",
     "react-fontawesome": "^1.6.1",
