Better messages support; fixed transition; added timeout

--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@types/react-dom": "^15.5.0",
     "@types/react-fontawesome": "^1.5.0",
     "@types/react-hot-loader": "^3.0.4",
-    "@types/react-transition-group": "^1.1.1",
     "@types/webpack-hot-middleware": "^2.16.0",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
@@ -49,10 +48,9 @@
     "object-assign": "^4.1.1",
     "paho-mqtt": "^1.0.3",
     "prop-types": "^15.5.10",
-    "react": ">=16.0.0-beta.5 <17",
-    "react-dom": ">=16.0.0-beta.5 <17",
+    "react": ">=15.6.1 <16",
+    "react-dom": ">=15.6.1 <16",
     "react-fontawesome": "^1.6.1",
-    "react-transition-group": "^1.2.0",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.72.0",
     "webpack-hot-middleware": "^2.19.1",
