Added pino logging

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "watch:server": "yarn build:server --watch",
     "start:dev-server": "webpack-dev-server --config ./app/webpack/dev.config.js",
     "start": "node dist/index.js",
+    "start:pretty": "yarn start | node dist/logging/prettyPrint.js",
     "lint:app": "tslint --project app --force --format verbose",
     "lint:server": "tslint --project server --force --format verbose",
     "lint": "run-p lint:*"
@@ -27,12 +28,14 @@
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
   "dependencies": {
+    "@types/chalk": "^0.4.31",
     "@types/classnames": "^2.2.0",
     "@types/core-js": "^0.9.43",
     "@types/express": "^4.0.37",
     "@types/node": "^8.0.6",
     "@types/object-assign": "^4.0.30",
     "@types/paho-mqtt": "^1.0.0",
+    "@types/pino": "^4.7.0",
     "@types/prop-types": "^15.5.1",
     "@types/react": "^16",
     "@types/react-dom": "^15.5.0",
@@ -47,6 +50,7 @@
     "mobx-react": "^4.2.1",
     "object-assign": "^4.1.1",
     "paho-mqtt": "^1.0.3",
+    "pino": "^4.7.2",
     "prop-types": "^15.5.10",
     "react": ">=15.6.1 <16",
     "react-dom": ">=15.6.1 <16",
