Migrated from paho-mqtt to mqtt package

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -16,13 +16,13 @@
             "node"
         ],
         "strict": true,
-        "baseUrl": ".",
+        "baseUrl": "..",
         "paths": {
             "@common/*": [
-                "../common/*"
+                "./common/*"
             ],
             "@app/*": [
-                "./*"
+                "./app/*"
             ]
         }
     }
