--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "@types/classnames": "^2.2.0",
     "@types/core-js": "^0.9.43",
     "@types/express": "^4.0.37",
+    "@types/mqtt": "^0.0.34",
     "@types/node": "^8.0.6",
     "@types/object-assign": "^4.0.30",
-    "@types/paho-mqtt": "^1.0.0",
     "@types/pino": "^4.7.0",
     "@types/prop-types": "^15.5.1",
     "@types/react": "^16",
@@ -48,8 +48,8 @@
     "font-awesome": "^4.7.0",
     "mobx": "^3.1.11",
     "mobx-react": "^4.2.1",
+    "mqtt": "^2.13.0",
     "object-assign": "^4.1.1",
-    "paho-mqtt": "^1.0.3",
     "pino": "^4.7.2",
     "prop-types": "^15.5.10",
     "react": ">=15.6.1 <16",
