Added good logging to client

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,16 @@
                     }
                 ]
             }
+        },
+        {
+            "type": "npm",
+            "script": "watch:server",
+            "problemMatcher": []
+        },
+        {
+            "type": "npm",
+            "script": "start:pretty",
+            "problemMatcher": []
         }
     ]
 }
