Made better webpack configs

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf ./dist ./build ./public",
-    "build:app": "webpack --config ./app/webpack/prod.config.js",
+    "build:app": "NODE_ENV=production webpack --config ./app/webpack.config.js --env prod",
     "build:server": "tsc --project server",
     "watch:app": "yarn build:app --watch",
     "watch:server": "yarn build:server --watch",
-    "start:dev-server": "webpack-dev-server --config ./app/webpack/dev.config.js",
-    "start": "node dist/index.js",
-    "start:pretty": "yarn start | node dist/logging/prettyPrint.js",
+    "start:dev-server": "NODE_ENV=development webpack-dev-server --config ./app/webpack.config.js --env dev",
+    "start": "NODE_ENV=development node dist/server/index.js",
+    "start:pretty": "yarn start | node dist/server/logging/prettyPrint.js",
     "lint:app": "tslint --project app --force --format verbose",
     "lint:server": "tslint --project server --force --format verbose",
     "lint": "run-p lint:*"
@@ -42,23 +42,33 @@
     "@types/react-fontawesome": "^1.5.0",
     "@types/react-hot-loader": "^3.0.4",
     "@types/webpack-hot-middleware": "^2.16.0",
+    "autoprefixer": "^7.1.4",
+    "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "classnames": "^2.2.5",
-    "core-js": "^2.4.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "font-awesome": "^4.7.0",
     "mobx": "^3.1.11",
     "mobx-react": "^4.2.1",
+    "module-alias": "^2.0.1",
     "mqtt": "^2.13.0",
     "object-assign": "^4.1.1",
     "pino": "^4.7.2",
+    "postcss-flexbugs-fixes": "^3.2.0",
+    "postcss-loader": "^2.0.6",
+    "promise": "^8.0.1",
     "prop-types": "^15.5.10",
     "react": ">=15.6.1 <16",
+    "react-dev-utils": "^4.1.0",
     "react-dom": ">=15.6.1 <16",
     "react-fontawesome": "^1.6.1",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.73.0",
-    "webpack-hot-middleware": "^2.19.1",
-    "webpack-merge": "^4.1.0"
+    "tslint-loader": "^3.5.3",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "url-loader": "^0.5.9",
+    "webpack-hot-middleware": "^2.19.1"
   },
   "devDependencies": {
     "@types/webpack-dev-middleware": "^1.9.3",
