--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "@types/react-dom": "^15.5.0",
     "@types/react-fontawesome": "^1.5.0",
     "@types/react-hot-loader": "^3.0.4",
-    "@types/webpack-hot-middleware": "^2.16.0",
     "autoprefixer": "^7.1.4",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "classnames": "^2.2.5",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "express-pino-logger": "^2.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "font-awesome": "^4.7.0",
     "mobx": "^3.1.11",
@@ -67,11 +67,9 @@
     "semantic-ui-react": "^0.73.0",
     "tslint-loader": "^3.5.3",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "url-loader": "^0.5.9",
-    "webpack-hot-middleware": "^2.19.1"
+    "url-loader": "^0.5.9"
   },
   "devDependencies": {
-    "@types/webpack-dev-middleware": "^1.9.3",
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.3",
     "css-loader": "^0.28.4",
@@ -87,7 +85,6 @@
     "tslint-react": "^3.2.0",
     "typescript": "^2.3.4",
     "webpack": "^3.0.0",
-    "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.4.4"
   }
 }
