--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start:dev-server": "NODE_ENV=development webpack-dev-server --config ./app/webpack.config.js --env dev",
     "start": "NODE_ENV=development node dist/server/index.js",
     "start:pretty": "yarn start | node dist/server/logging/prettyPrint.js",
+    "start:nodemon": "NODE_ENV=development nodemon --exec \"node dist/server/index.js | node dist/server/logging/prettyPrint.js\"",
+    "start:watch": "run-p watch:server start:nodemon",
+    "start:all": "run-p start:dev-server start:watch",
     "lint:app": "tslint --project app --force --format verbose",
     "lint:server": "tslint --project server --force --format verbose",
     "lint": "run-p lint:*"
@@ -76,6 +79,7 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "mobx-react-devtools": "^4.2.13",
+    "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "source-map-loader": "^0.2.1",
