--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,10 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceRoot}/bin/www"
+            "env": {
+                "NODE_ENV": "development"
+            },
+            "program": "${workspaceRoot}/dist/server/index.js"
         }
     ]
 }
