--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/classnames": "^2.2.0",
     "@types/core-js": "^0.9.43",
     "@types/express": "^4.0.37",
+    "@types/lodash": "^4.14.77",
     "@types/mqtt": "^0.0.34",
     "@types/node": "^8.0.6",
     "@types/object-assign": "^4.0.30",
@@ -52,6 +53,7 @@
     "express-pino-logger": "^2.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
     "mobx": "^3.1.11",
     "mobx-react": "^4.2.1",
     "module-alias": "^2.0.1",
