--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -1,6 +1,26 @@
 {
-    "experimentalDecorators": true,
     "compilerOptions": {
-        "target": "es5"
-    }
+        "experimentalDecorators": true,
+        "target": "es5",
+        "lib": [
+            "es6"
+        ],
+        "types": [
+            "node"
+        ],
+        "strict": true,
+        "allowJs": true,
+        "baseUrl": "..",
+        "paths": {
+            "@common/*": [
+                "./common/*"
+            ],
+            "@app/*": [
+                "./app/*"
+            ]
+        }
+    },
+    "include": [
+        "./**/*.ts"
+    ]
 }
