--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,7 @@
             "env": {
                 "NODE_ENV": "development"
             },
+            "console": "integratedTerminal",
             "program": "${workspaceRoot}/dist/server/index.js"
         }
     ]
