--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
   "dependencies": {
+    "@types/async": "^2.0.43",
     "@types/chalk": "^0.4.31",
     "@types/classnames": "^2.2.0",
     "@types/core-js": "^0.9.43",
@@ -45,6 +46,7 @@
     "@types/react-dom": "^15.5.0",
     "@types/react-fontawesome": "^1.5.0",
     "@types/react-hot-loader": "^3.0.4",
+    "async": "^2.5.0",
     "autoprefixer": "^7.1.4",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "classnames": "^2.2.5",
@@ -70,6 +72,7 @@
     "react-fontawesome": "^1.6.1",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.73.0",
+    "serializr": "^1.1.13",
     "tslint-loader": "^3.5.3",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.9"
