--- a/package.json
+++ b/package.json
@@ -31,6 +31,15 @@
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
   "dependencies": {
+    "express": "^4.15.4",
+    "express-pino-logger": "^2.0.0",
+    "mobx": "^3.1.11",
+    "module-alias": "^2.0.1",
+    "mqtt": "^2.13.0",
+    "pino": "^4.7.2",
+    "serializr": "^1.1.13"
+  },
+  "devDependencies": {
     "@types/async": "^2.0.43",
     "@types/chalk": "^0.4.31",
     "@types/classnames": "^2.2.0",
@@ -42,60 +51,59 @@
     "@types/object-assign": "^4.0.30",
     "@types/pino": "^4.7.0",
     "@types/prop-types": "^15.5.1",
-    "@types/react": "^16",
-    "@types/react-dom": "^15.5.0",
+    "@types/react": "^16.0.10",
+    "@types/react-dom": "^16.0.1",
     "@types/react-fontawesome": "^1.5.0",
     "@types/react-hot-loader": "^3.0.4",
+    "@types/webpack-env": "^1.13.0",
     "@types/ws": "^3.2.0",
     "async": "^2.5.0",
     "autoprefixer": "^7.1.4",
+    "awesome-typescript-loader": "^3.1.3",
+    "babel-minify-webpack-plugin": "^0.2.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "classnames": "^2.2.5",
+    "css-loader": "^0.28.4",
     "dotenv": "^4.0.0",
-    "express": "^4.15.4",
-    "express-pino-logger": "^2.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
+    "html-webpack-plugin": "^2.28.0",
     "lodash": "^4.17.4",
-    "mobx": "^3.1.11",
     "mobx-react": "^4.2.1",
-    "module-alias": "^2.0.1",
-    "mqtt": "^2.13.0",
+    "mobx-react-devtools": "^4.2.13",
+    "nodemon": "^1.12.1",
+    "npm-run-all": "^4.1.1",
     "object-assign": "^4.1.1",
-    "pino": "^4.7.2",
     "postcss-flexbugs-fixes": "^3.2.0",
     "postcss-loader": "^2.0.6",
     "promise": "^8.0.1",
     "prop-types": "^15.5.10",
-    "react": ">=15.6.1 <16",
+    "react": "^16.0.0",
     "react-dev-utils": "^4.1.0",
-    "react-dom": ">=15.6.1 <16",
+    "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
-    "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.73.0",
-    "serializr": "^1.1.13",
-    "tslint-loader": "^3.5.3",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "url-loader": "^0.5.9",
-    "ws": "^3.2.0"
-  },
-  "devDependencies": {
-    "@types/webpack-env": "^1.13.0",
-    "awesome-typescript-loader": "^3.1.3",
-    "css-loader": "^0.28.4",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
-    "mobx-react-devtools": "^4.2.13",
-    "nodemon": "^1.12.1",
-    "npm-run-all": "^4.1.1",
     "react-hot-loader": "^3.0.0-beta.6",
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.74.2",
     "source-map-loader": "^0.2.1",
-    "style-loader": "^0.18.1",
+    "style-loader": "^0.19.0",
     "ts-loader": "^2.1.0",
     "tslint": "^5.4.2",
+    "tslint-loader": "^3.5.3",
     "tslint-react": "^3.2.0",
     "typescript": "^2.3.4",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "url-loader": "^0.6.2",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.4.4"
+    "webpack-dev-server": "^2.4.4",
+    "ws": "^3.2.0"
+  },
+  "resolutions": {
+    "**/@types/react": "16.0.10",
+    "**/@types/react-dom": "16.0.1",
+    "**/react": "16.0.0",
+    "**/react-dom": "16.0.0",
+    "**/uglify-es": "3.1.3"
   }
 }
