Made requests a lot better to match grinklers

--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -8,6 +8,7 @@
         "types": [
             "node"
         ],
+        "module": "commonjs",
         "strict": true,
         "allowJs": true,
         "baseUrl": "..",
