--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "run-p lint:*"
   },
   "files": [
-    "dist", "public"
+    "dist",
+    "public"
   ],
   "repository": {
     "type": "git",
@@ -38,8 +39,10 @@
     "express-pino-logger": "^2.0.0",
     "mobx": "^3.1.11",
     "module-alias": "^2.0.1",
+    "moment": "^2.19.1",
     "mqtt": "^2.13.0",
     "pino": "^4.7.2",
+    "postcss-cssnext": "^3.0.2",
     "serializr": "^1.1.13"
   },
   "devDependencies": {
@@ -74,6 +77,7 @@
     "lodash": "^4.17.4",
     "mobx-react": "^4.2.1",
     "mobx-react-devtools": "^4.2.13",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.1",
     "object-assign": "^4.1.1",
@@ -85,6 +89,7 @@
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "sass-loader": "^6.0.6",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.74.2",
     "source-map-loader": "^0.2.1",
