--- a/package.json
+++ b/package.json
@@ -35,81 +35,79 @@
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
   "dependencies": {
-    "express": "^4.15.4",
-    "express-pino-logger": "^2.0.0",
-    "mobx": "^3.1.11",
-    "module-alias": "^2.0.1",
-    "moment": "^2.19.1",
-    "mqtt": "^2.13.0",
-    "pino": "^4.7.2",
-    "postcss-cssnext": "^3.0.2",
-    "serializr": "^1.1.13"
+    "chalk": "^2.3.2",
+    "express": "^4.16.3",
+    "express-pino-logger": "^3.0.1",
+    "mobx": "^4.1.1",
+    "module-alias": "^2.0.6",
+    "moment": "^2.22.0",
+    "mqtt": "^2.17.0",
+    "pino": "^4.16.1",
+    "postcss-cssnext": "^3.1.0",
+    "serializr": "^1.1.14",
+    "uglify-es": "3.3.9"
   },
   "devDependencies": {
-    "@types/async": "^2.0.43",
-    "@types/chalk": "^0.4.31",
+    "@types/async": "^2.0.49",
     "@types/classnames": "^2.2.0",
-    "@types/core-js": "^0.9.43",
-    "@types/express": "^4.0.37",
-    "@types/lodash": "^4.14.77",
-    "@types/mqtt": "^0.0.34",
-    "@types/node": "^8.0.6",
+    "@types/core-js": "^0.9.46",
+    "@types/express": "^4.11.1",
+    "@types/lodash": "^4.14.106",
+    "@types/node": "^9.6.4",
     "@types/object-assign": "^4.0.30",
-    "@types/pino": "^4.7.0",
+    "@types/pino": "^4.7.1",
     "@types/prop-types": "^15.5.1",
-    "@types/react": "^16.0.10",
-    "@types/react-dom": "^16.0.1",
-    "@types/react-hot-loader": "^3.0.4",
-    "@types/webpack-env": "^1.13.0",
-    "@types/ws": "^3.2.0",
-    "async": "^2.5.0",
-    "autoprefixer": "^7.1.4",
-    "awesome-typescript-loader": "^3.1.3",
-    "babel-minify-webpack-plugin": "^0.2.0",
-    "case-sensitive-paths-webpack-plugin": "^2.1.1",
+    "@types/react": "16.3.9",
+    "@types/react-dom": "16.0.5",
+    "@types/react-hot-loader": "^3.0.6",
+    "@types/webpack-env": "^1.13.6",
+    "@types/ws": "^4.0.2",
+    "async": "^2.6.0",
+    "autoprefixer": "^8.2.0",
+    "awesome-typescript-loader": "^5.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.5",
-    "css-loader": "^0.28.4",
-    "dotenv": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.5",
+    "css-loader": "^0.28.11",
+    "dotenv": "^5.0.1",
+    "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
-    "html-webpack-plugin": "^2.28.0",
-    "lodash": "^4.17.4",
-    "mobx-react": "^4.2.1",
-    "mobx-react-devtools": "^4.2.13",
-    "node-sass": "^4.5.3",
-    "nodemon": "^1.12.1",
-    "npm-run-all": "^4.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.5",
+    "mobx-react": "^5.0.0",
+    "mobx-react-devtools": "^5.0.1",
+    "node-sass": "^4.8.3",
+    "nodemon": "^1.17.3",
+    "npm-run-all": "^4.1.2",
     "object-assign": "^4.1.1",
-    "postcss-flexbugs-fixes": "^3.2.0",
-    "postcss-loader": "^2.0.6",
+    "postcss-flexbugs-fixes": "^3.3.0",
+    "postcss-loader": "^2.1.3",
     "promise": "^8.0.1",
-    "prop-types": "^15.5.10",
-    "react": "^16.0.0",
-    "react-dev-utils": "^4.1.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "sass-loader": "^6.0.6",
-    "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.74.2",
-    "source-map-loader": "^0.2.1",
-    "style-loader": "^0.19.0",
-    "ts-loader": "^2.1.0",
-    "tslint": "^5.4.2",
-    "tslint-loader": "^3.5.3",
-    "tslint-react": "^3.2.0",
+    "prop-types": "^15.6.1",
+    "react": "16.3.1",
+    "react-dev-utils": "^5.0.1",
+    "react-dom": "16.3.1",
+    "react-hot-loader": "^4.0.1",
+    "sass-loader": "^6.0.7",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.79.1",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "^0.20.3",
+    "ts-loader": "^4.2.0",
+    "tslint": "^5.9.1",
+    "tslint-loader": "^3.6.0",
+    "tslint-react": "^3.5.1",
     "typescript": "^2.3.4",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.4.4",
-    "ws": "^3.2.0"
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3",
+    "ws": "^5.1.1"
   },
   "resolutions": {
-    "**/@types/react": "16.0.10",
-    "**/@types/react-dom": "16.0.1",
-    "**/react": "16.0.0",
-    "**/react-dom": "16.0.0",
-    "**/uglify-es": "3.1.3"
+    "**/@types/react": "16.3.9",
+    "**/@types/react-dom": "16.0.5",
+    "**/react": "16.3.1",
+    "**/react-dom": "16.3.1"
   }
 }
