--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev-server": "NODE_ENV=development webpack-dev-server --config ./app/webpack.config.js --env dev",
     "start": "NODE_ENV=development node dist/server/index.js",
     "start:pretty": "yarn start | node dist/server/logging/prettyPrint.js",
-    "start:nodemon": "NODE_ENV=development nodemon --exec \"node dist/server/index.js | node dist/server/logging/prettyPrint.js\"",
+    "start:nodemon": "nodemon --delay 0.5 --exec \"env NODE_ENV=development node dist/server/index.js | node dist/server/logging/prettyPrint.js\"",
     "start:watch": "run-p watch:server start:nodemon",
     "start:dev": "run-p start:dev-server start:watch",
     "lint:app": "tslint --project app --force --format verbose",
@@ -45,7 +45,8 @@
     "pino": "^4.16.1",
     "postcss-cssnext": "^3.1.0",
     "serializr": "^1.1.14",
-    "uglify-es": "3.3.9"
+    "uglify-es": "3.3.9",
+    "ws": "^5.1.1"
   },
   "devDependencies": {
     "@types/async": "^2.0.49",
@@ -101,8 +102,7 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3",
-    "ws": "^5.1.1"
+    "webpack-dev-server": "^3.1.3"
   },
   "resolutions": {
     "**/@types/react": "16.3.9",
