--- a/package.json
+++ b/package.json
@@ -35,18 +35,16 @@
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
   "dependencies": {
-    "@types/react-router-dom": "^4.2.7",
     "chalk": "^2.4.1",
     "express": "^4.16.3",
     "express-pino-logger": "^3.0.2",
+    "fork-ts-checker-webpack-plugin": "^0.4.2",
     "mobx": "^5.0.3",
     "module-alias": "^2.1.0",
     "moment": "^2.22.2",
     "mqtt": "^2.18.1",
     "pino": "^4.17.3",
-    "postcss-cssnext": "^3.1.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "rethinkdb": "^2.3.3",
     "serializr": "^1.2.0",
     "uglify-es": "3.3.9",
     "ws": "^5.2.1"
@@ -57,6 +55,7 @@
     "@types/core-js": "^2.5.0",
     "@types/express": "^4.16.0",
     "@types/lodash": "^4.14.110",
+    "@types/lodash-es": "^4.17.0",
     "@types/node": "^10.3.5",
     "@types/object-assign": "^4.0.30",
     "@types/pino": "^4.16.0",
@@ -64,19 +63,23 @@
     "@types/react": "16.4.1",
     "@types/react-dom": "16.0.6",
     "@types/react-hot-loader": "^4.1.0",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/rethinkdb": "^2.3.11",
     "@types/webpack-env": "^1.13.6",
     "@types/ws": "^5.1.2",
     "async": "^2.6.1",
     "autoprefixer": "^8.6.3",
-    "awesome-typescript-loader": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.6",
     "css-loader": "^0.28.11",
     "dotenv": "^6.0.0",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
+    "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
+    "lodash-es": "^4.17.10",
+    "mini-css-extract-plugin": "^0.4.0",
     "mobx-react": "^5.2.3",
     "mobx-react-devtools": "^5.0.1",
     "node-sass": "^4.8.3",
@@ -85,12 +88,15 @@
     "object-assign": "^4.1.1",
     "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-loader": "^2.1.5",
+    "postcss-preset-env": "^5.2.1",
     "promise": "^8.0.1",
     "prop-types": "^15.6.2",
     "react": "16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "16.4.1",
     "react-hot-loader": "^4.3.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "sass-loader": "^7.0.3",
     "semantic-ui-css": "^2.3.2",
     "semantic-ui-react": "^0.81.1",
@@ -98,13 +104,14 @@
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.1",
     "tslint": "^5.10.0",
-    "tslint-loader": "^3.6.0",
     "tslint-react": "^3.6.0",
     "typescript": "^2.9.2",
     "uglifyjs-webpack-plugin": "^1.2.6",
     "url-loader": "^1.0.1",
     "webpack": "^4.12.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.0.8",
+    "webpack-dashboard": "^2.0.0",
     "webpack-dev-server": "^3.1.4"
   },
   "resolutions": {
