--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "homepage": "https://github.com/amikhalev/sprinklers3#readme",
   "dependencies": {
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "express": "^4.16.3",
     "express-pino-logger": "^3.0.2",
@@ -51,6 +53,7 @@
   },
   "devDependencies": {
     "@types/async": "^2.0.49",
+    "@types/bcrypt": "^2.0.0",
     "@types/classnames": "^2.2.4",
     "@types/core-js": "^2.5.0",
     "@types/express": "^4.16.0",
