--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "chalk": "^2.4.1",
     "express": "^4.16.3",
     "express-pino-logger": "^3.0.2",
+    "express-promise-router": "^3.0.2",
     "fork-ts-checker-webpack-plugin": "^0.4.2",
+    "jsonwebtoken": "^8.3.0",
     "mobx": "^5.0.3",
     "module-alias": "^2.1.0",
     "moment": "^2.22.2",
@@ -57,6 +59,7 @@
     "@types/classnames": "^2.2.4",
     "@types/core-js": "^2.5.0",
     "@types/express": "^4.16.0",
+    "@types/jsonwebtoken": "^7.2.7",
     "@types/lodash": "^4.14.110",
     "@types/lodash-es": "^4.17.0",
     "@types/node": "^10.3.5",
