--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "mobx-react": "^5.2.3",
     "mobx-react-devtools": "^5.0.1",
+    "mobx-react-router": "^4.0.4",
     "node-sass": "^4.8.3",
     "nodemon": "^1.17.5",
     "npm-run-all": "^4.1.3",
