Migrated to using typeorm+postgres for database

--- a/package.json
+++ b/package.json
@@ -43,14 +43,17 @@
     "express-promise-router": "^3.0.2",
     "fork-ts-checker-webpack-plugin": "^0.4.2",
     "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.10",
     "mobx": "^5.0.3",
     "mobx-utils": "^5.0.0",
     "module-alias": "^2.1.0",
     "moment": "^2.22.2",
     "mqtt": "^2.18.1",
+    "pg": "^7.4.3",
     "pino": "^4.17.3",
-    "rethinkdb": "^2.3.3",
+    "reflect-metadata": "^0.1.12",
     "serializr": "^1.2.0",
+    "typeorm": "^0.2.7",
     "uglify-es": "3.3.9",
     "ws": "^5.2.1"
   },
@@ -61,7 +64,7 @@
     "@types/core-js": "^2.5.0",
     "@types/express": "^4.16.0",
     "@types/jsonwebtoken": "^7.2.7",
-    "@types/lodash-es": "^4.17.0",
+    "@types/lodash": "^4.14.112",
     "@types/node": "^10.3.5",
     "@types/object-assign": "^4.0.30",
     "@types/pino": "^4.16.0",
@@ -70,7 +73,6 @@
     "@types/react-dom": "16.0.6",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-router-dom": "^4.2.7",
-    "@types/rethinkdb": "^2.3.11",
     "@types/webpack-env": "^1.13.6",
     "@types/ws": "^5.1.2",
     "async": "^2.6.1",
@@ -83,7 +85,6 @@
     "font-awesome": "^4.7.0",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "lodash-es": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
     "mobx-react": "^5.2.3",
     "mobx-react-devtools": "^5.0.1",
