--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "classnames": "^2.2.6",
     "css-loader": "^0.28.11",
     "dotenv": "^6.0.0",
+    "favicons-webpack-plugin": "^0.0.9",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "happypack": "^5.0.0",
