--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "rm -rf ./dist ./build ./public",
     "build:app": "NODE_ENV=production webpack --config ./app/webpack.config.js --env prod",
     "build:server": "tsc --project server",
+    "build": "run-p build:*",
     "watch:app": "yarn build:app --watch",
     "watch:server": "yarn build:server --watch",
     "start:dev-server": "NODE_ENV=development webpack-dev-server --config ./app/webpack.config.js --env dev",
@@ -41,7 +42,6 @@
     "express": "^4.16.3",
     "express-pino-logger": "^3.0.2",
     "express-promise-router": "^3.0.3",
-    "fork-ts-checker-webpack-plugin": "^0.4.3",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mobx": "^5.0.3",
@@ -54,7 +54,6 @@
     "reflect-metadata": "^0.1.12",
     "serializr": "^1.3.0",
     "typeorm": "^0.2.7",
-    "uglify-es": "3.3.9",
     "ws": "^6.0.0"
   },
   "devDependencies": {
@@ -84,6 +83,7 @@
     "favicons-webpack-plugin": "^0.0.9",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
+    "fork-ts-checker-webpack-plugin": "^0.4.3",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
@@ -114,6 +114,7 @@
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
     "typescript": "^2.9.2",
+    "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.2.6",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.2",
