Added depends_on to docker-compose files

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+    depends_on:
+      - database
     ports:
       - "8080:8080"
       - "8081:8081"
