--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/react-dom": "16.0.6",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-router-dom": "^4.3.0",
+    "@types/react-sortable-hoc": "^0.6.3",
     "@types/webpack-env": "^1.13.6",
     "@types/ws": "^5.1.2",
     "async": "^2.6.1",
@@ -105,6 +106,7 @@
     "react-hot-loader": "^4.3.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-sortable-hoc": "^0.8.3",
     "sass-loader": "^7.0.3",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.1",
