Keep track of editing state with query string; allow deleting of program items

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/object-assign": "^4.0.30",
     "@types/pino": "^4.16.0",
     "@types/prop-types": "^15.5.4",
+    "@types/query-string": "^6.1.0",
     "@types/react": "16.4.7",
     "@types/react-dom": "16.0.6",
     "@types/react-hot-loader": "^4.1.0",
@@ -100,6 +101,7 @@
     "postcss-preset-env": "^5.2.3",
     "promise": "^8.0.1",
     "prop-types": "^15.6.2",
+    "query-string": "^6.1.0",
     "react": "16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "16.4.1",
