Moved /app to /client

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,8 +21,8 @@
       "@common/*": [
         "./common/*"
       ],
-      "@app/*": [
-        "./app/*"
+      "@client/*": [
+        "./client/*"
       ]
     }
   },
