--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -17,8 +17,8 @@
             "@common/*": [
                 "./common/*"
             ],
-            "@app/*": [
-                "./app/*"
+            "@client/*": [
+                "./client/*"
             ]
         }
     },
