--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,7 @@ services:
       - "8080:8080"
       - "8081:8081"
     volumes:
-      - ./app:/app/app
+      - ./client:/app/client
       - ./common:/app/common
       - ./server:/app/server
     env_file:
