--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf ./dist ./build ./public",
-    "build:app": "NODE_ENV=production webpack --config ./app/webpack.config.js --env prod",
+    "build:client": "NODE_ENV=production webpack --config ./client/webpack.config.js --env prod",
     "build:server": "tsc --project server",
     "build": "run-p build:*",
-    "watch:app": "yarn build:app --watch",
+    "watch:client": "yarn build:client --watch",
     "watch:server": "yarn build:server --watch",
-    "start:dev-server": "NODE_ENV=development webpack-dev-server --config ./app/webpack.config.js --env dev",
+    "start:dev-server": "NODE_ENV=development webpack-dev-server --config ./client/webpack.config.js --env dev",
     "start": "NODE_ENV=development node dist/server/index.js",
     "start:pretty": "yarn start | node dist/server/logging/prettyPrint.js",
     "start:nodemon": "nodemon --delay 0.5 --exec \"env NODE_ENV=development node dist/server/index.js | node dist/server/logging/prettyPrint.js\"",
     "start:watch": "run-p watch:server start:nodemon",
     "start:dev": "run-p start:dev-server start:watch",
-    "lint:app": "tslint --project app --force --format verbose",
+    "lint:client": "tslint --project client --force --format verbose",
     "lint:server": "tslint --project server --force --format verbose",
     "lint": "run-p lint:*"
   },
