Use . instead of explicit main path in package.json

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "watch:client": "yarn build:client --watch",
     "watch:server": "yarn build:server --watch",
     "start:dev-server": "NODE_ENV=development webpack-dev-server --config ./client/webpack.config.js --env dev",
-    "start": "NODE_ENV=development node dist/server/index.js",
+    "start": "NODE_ENV=development node .",
     "start:pretty": "yarn start | node dist/server/logging/prettyPrint.js",
-    "start:nodemon": "nodemon --delay 0.5 --exec \"env NODE_ENV=development node dist/server/index.js | node dist/server/logging/prettyPrint.js\"",
+    "start:nodemon": "nodemon --delay 0.5 --exec \"env NODE_ENV=development node . | node dist/server/logging/prettyPrint.js\"",
     "start:watch": "run-p watch:server start:nodemon",
     "start:dev": "run-p start:dev-server start:watch",
     "lint:client": "tslint --project client --force --format verbose",
