Nice refactoring and verification of api endpoints

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,8 +21,8 @@
       "@common/*": [
         "./common/*"
       ],
-      "@client/*": [
-        "./client/*"
+      "@server/*": [
+        "./server/*"
       ]
     }
   },
