--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,5 +25,10 @@
                 "./client/*"
             ]
         }
-    }
+    },
+    "references": [
+        {
+            "path": "../common"
+        }
+    ]
 }
