--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "description": "A frontend for mqtt based IoT sprinklers systems",
-  "main": "dist/server/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf ./dist ./build ./public",
     "build:client": "NODE_ENV=production webpack --config ./client/webpack.config.js --env prod",
-    "build:server": "tsc --project server",
+    "build:server": "tsc --build server",
     "build": "run-p build:*",
     "watch:client": "yarn build:client --watch",
     "watch:server": "yarn build:server --watch",
     "start:dev-server": "NODE_ENV=development webpack-dev-server --config ./client/webpack.config.js --env dev",
     "start": "NODE_ENV=development node .",
-    "start:pretty": "yarn start | node dist/server/logging/prettyPrint.js",
-    "start:nodemon": "nodemon --delay 0.5 --exec \"env NODE_ENV=development node . | node dist/server/logging/prettyPrint.js\"",
+    "start:pretty": "yarn start | node dist/logging/prettyPrint.js",
+    "start:nodemon": "nodemon --delay 0.5 --exec \"env NODE_ENV=development node . | node dist/logging/prettyPrint.js\"",
     "start:watch": "run-p watch:server start:nodemon",
     "start:dev": "run-p start:dev-server start:watch",
     "lint:client": "tslint --project client --force --format verbose",
