fix: use proper pretty command in package.json

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "watch:server": "yarn build:server --watch",
     "start:dev-server": "webpack-dev-server --config ./client/webpack.config.js --env development",
     "start": "node . serve",
-    "start:pretty": "node . serve | node . prettyPrint",
-    "start:nodemon": "nodemon --delay 0.5 --exec \"node . serve | node . prettyPrint\"",
+    "start:pretty": "node . serve | node . pretty",
+    "start:nodemon": "nodemon --delay 0.5 --exec \"node . serve | node . pretty\"",
     "start:watch": "run-p watch:server start:nodemon",
     "start:dev": "run-p start:dev-server start:watch",
     "lint:client": "tslint --project client --force --format verbose",
