--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,6 @@ services:
       # Must specify JWT_SECRET and MQTT_URL
 
   database:
-    image: "postgres:11-alpine"
+    image: "postgres:11"
     environment:
       - POSTGRES_PASSWORD=8JN4w0UsN5dbjMjNvPe452P2yYOqg5PV
