--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,7 @@ services:
       - "8080:8080"
       - "8081:8081"
     volumes:
+      - ./bin:/app/bin
       - ./client:/app/client
       - ./common:/app/common
       - ./server:/app/server
